spacing fixes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,7 +18,7 @@
 #content{
 
     min-height: 50vh;
-    margin-top: 120px;
+    margin-top: 100px;
 }
 
 .btn{
