--- a/resources/assets/sass/layout.scss
+++ b/resources/assets/sass/layout.scss
@@ -10,6 +10,7 @@
 .footer {
     background: #e9646c;
     height: auto;
+    padding-top: 30px;
     padding-bottom: 30px;
     position: relative;
     width: 100%;
